[package]
name = "rust_solver"
version = "0.1.0"
authors = ["ruffers9 <kwmurph2@asu.edu>"]
edition = "2018"

[profile.release]
rustflags = ["-C", "target-cpu=native"]

[build-dependencies]
bindgen = "0.53.1"

[dependencies]
rust_poker = { path = "../rust_poker" }
crossbeam = "0.7.3"
rayon = "1.0.1"
bytepack = "0.4.1"
memmap = "0.7.0"
byteorder = "1.3.4"
# rand = { version = "0.7", features = ["small_rng"] }
rand = "0.6.5"


