[package]
name = "rust_solver"
version = "0.1.0"
authors = ["ruffers9 <kwmurph2@asu.edu>"]
edition = "2018"

[profile.bench]
debug = true

[profile.release]
rustflags = "-C target-cpu=native"

[[bin]]
name = "solver"
path = "src/solver/main.rs"

[[bin]]
name = "gen_abstraction"
path = "src/gen_abstraction/main.rs"

[dependencies]
rust_poker = "0.5.0"
crossbeam = "0.7.3"
rayon = "1.0.1"
bytepack = "0.4.1"
byteorder = "1.3.4"
rand = { version = "0.7", features = ["small_rng"] }
combine = "4.2.1"
hashbrown = "0.8.0"
